--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,3 +24,8 @@ jobs:
       # specify any bash command here prefixed with `run: `
       - run: go get -v -t -d ./...
       - run: go test -v cmd/apiserver
+workflows:
+  version: 2
+  deploy-all:
+    jobs:
+      - build-apiserver
