--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
 
       # specify any bash command here prefixed with `run: `
       - run: go get -v -t -d ./...
-      - run: go test -v cmd/apiserver
+      - run: go test -v github.com/kramergroup/dhcpmanager/cmd/apiserver
 workflows:
   version: 2
   deploy-all:
