--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,27 +5,35 @@ version: 2
 jobs:
   build-apiserver:
     docker:
-      # specify the version
       - image: circleci/golang:1.9
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/kramergroup/dhcpmanager
     steps:
       - checkout
-
-      # specify any bash command here prefixed with `run: `
       - run: go get -v -t -d ./...
-      - run: go test -v github.com/kramergroup/dhcpmanager/cmd/apiserver
+      - run: go test -v github.com/kramergroup/dhcpmanager/cmd/apiserver -o /go/bin/apiserver
+      - persist_to_workspace:
+          root: /go
+          paths:
+            - bin
+
+  build-controller:
+    docker:
+      - image: circleci/golang:1.9
+
+    working_directory: /go/src/github.com/kramergroup/dhcpmanager
+    steps:
+      - checkout
+      - run: go get -v -t -d ./...
+      - run: go test -v github.com/kramergroup/dhcpmanager/cmd/controller -o /go/bin/controller
+      - persist_to_workspace:
+          root: /go
+          paths:
+            - bin
+
 workflows:
   version: 2
-  deploy-all:
+  build-all:
     jobs:
       - build-apiserver
+      - build-controller
