--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,9 @@ jobs:
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run: docker build -f cmd/apiserver/Dockerfile.circleci -t kramergroup/dhcpmanager-apiserver
       - run: docker push kramergroup/dhcpmanager-apiserver
-      
+      - run: docker build -f cmd/controller/Dockerfile.circleci -t kramergroup/dhcpmanager-controller
+      - run: docker push kramergroup/dhcpmanager-controller
+
 workflows:
   version: 2
   build-all:
@@ -50,5 +52,10 @@ workflows:
       - build-apiserver
       - build-controller
   deploy:
-    - requires:
-      - build-all
+    jobs:
+      - build-apiserver
+      - build-controller
+      - deploy
+        - requires:
+          - build-apiserver
+          - build-controller
