UI build config

--- a/cmd/ui/Dockerfile
+++ b/cmd/ui/Dockerfile
@@ -5,13 +5,13 @@ RUN npm install -g react-scripts && \
 		npm install -g react && \
 		npm install -g react-dom && \
 		npm install -g react-websocket && \
-		npm install -g @material-ui && \
-		npm install -g d3
+		npm install -g @material-ui/core && \
+		npm install -g prop-types && \
+		npm install -g d3 
 
 COPY ./cmd/ui/frontend /ui
 WORKDIR /ui
 
-RUN npm install --save
 RUN npm run build
 
 # ---------------------------------------------------------------------------------------------
