--- a/cmd/ui/Dockerfile
+++ b/cmd/ui/Dockerfile
@@ -1,16 +1,11 @@
 FROM node:latest as ui-builder
 
-RUN npm install -g react-scripts && \
-		npm install -g ajv && \
-		npm install -g react && \
-		npm install -g react-dom && \
-		npm install -g react-websocket && \
-		npm install -g @material-ui/core && \
-		npm install -g prop-types && \
-		npm install -g d3 
+WORKDIR /ui
+
+RUN npm install react-scripts ajv react react-dom react-websocket \
+								material-ui/core prop-types d3
 
 COPY ./cmd/ui/frontend /ui
-WORKDIR /ui
 
 RUN npm run build
 
