--- a/cmd/ui/frontend/package.json
+++ b/cmd/ui/frontend/package.json
@@ -11,7 +11,8 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
-    "react-websocket": "^2.0.0"
+    "react-websocket": "^2.0.0",
+    "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
